# gwenflow

./: .env.test  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  biography.pptx  biography_flow_2.pptx  pyproject.toml  report.txt  setup.py  test_ecologits.py
examples/: README.md  agent.py  agent_async.py  agent_bikes.py  agent_finance.py  agent_finance_portfolio.py  agent_finance_research_team.py  agent_finance_risk.py  agent_finance_screener.py  agent_fx.py  agent_fx_1.py  agent_fx_2.py  agent_memory.py  agent_news.py  agent_seo.py  agent_structured_output.py  agent_web.py  agent_websearch_renovation-strategy.py  agent_websearch_renovation_strategy.py  agent_websearch_seo.py  agent_wikipedia.py  biography_flow_2.pptx  demo_batch.py  demo_flow_sequential.py  demo_flow_yaml.py  demo_telemetry.py  demo_tools_app.py  duckduckgo-search.py  flow_financial.py  flow_with_langchain_tools.py  flow_with_langchain_tools_automated.py  kamalaharris.pptx  sentiment_analysis_agent.py  simple_agent.py  task prioritization agent.py
gwenflow/: __init__.py  cli.py  exceptions.py  logger.py
internal_tests/: Beyonce_Biography_Summary.pptx  David_Meyer_Biography.pptx  David_Meyer_Presentation.pptx  context.py  drawflow.py  generate_html.py  gitdir.py  kamalaharris.pptx  output2.html  output3.html  test-s3.py  test.json  test.md  test_agent coding.py  test_agent data challenge.py  test_agent langchain tool.py  test_agent langchain web scapping.py  test_agent langchain wrapper.py  test_agent no_task.py  test_agent.py  test_agent_chat.py  test_agent_retriever.py  test_agent_tools.py  test_agent_tools_functions.py  test_agent_tools_mcp.py  (+25 more)
(+887 files in other folders)
